--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ maintainers = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "beanie>=2.0.0",
     "fastapi>=0.116.1",
     "pydantic>=2.11.7",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings>=2.10.1",
+    "sqlalchemy[asyncio]>=2.0.41",
     "uvicorn>=0.35.0",
 ]
 
