--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ maintainers = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.30.0",
     "beanie>=2.0.0",
     "fastapi>=0.116.1",
     "pydantic>=2.11.7",
@@ -33,11 +34,11 @@ dev = [
     "commitizen>=4.8.3",
     "mypy>=1.17.0",
     "pre-commit>=4.2.0",
-    "ruff>=0.12.4",
+    "ruff>=0.12.5",
     "safety>=3.2.9",
 ]
 test = [
-    "coverage>=7.9.2",
+    "coverage>=7.10.0",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.2.1",
