--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "beanie>=2.0.0",
     "fastapi>=0.116.1",
+    "phonenumbers>=9.0.10",
     "pydantic>=2.11.7",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings>=2.10.1",
