--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.30.0",
     "beanie>=2.0.0",
+    "email-validator>=2.2.0",
     "fastapi>=0.116.1",
     "orjson>=3.11.1",
     "phonenumbers>=9.0.10",
