chore(deps): update internal libraries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "email-validator>=2.2.0",
     "fastapi>=0.116.1",
     "orjson>=3.11.1",
+    "passlib>=1.7.4",
     "phonenumbers>=9.0.10",
     "pydantic>=2.11.7",
     "pydantic-extra-types>=2.10.5",
@@ -35,13 +36,13 @@ dev = [
     "bandit>=1.8.6",
     "codespell>=2.4.1",
     "commitizen>=4.8.3",
-    "mypy>=1.17.0",
+    "mypy>=1.17.1",
     "pre-commit>=4.2.0",
     "ruff>=0.12.7",
     "safety>=3.2.9",
 ]
 test = [
-    "coverage>=7.10.1",
+    "coverage>=7.10.2",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.2.1",
