--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings>=2.10.1",
+    "python-binary-memcached>=0.31.4",
     "resend>=2.11.0",
     "sqlalchemy[asyncio]>=2.0.42",
     "uvicorn>=0.35.0",
