--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,12 +40,12 @@ repos:
           - --py3-plus
           - --keep-runtime-typing
 
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.4.1
-    hooks:
-      - id: codespell
-        additional_dependencies:
-          - tomli
+#  - repo: https://github.com/codespell-project/codespell
+#    rev: v2.4.1
+#    hooks:
+#      - id: codespell
+#        additional_dependencies:
+#          - tomli
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.12.7
