--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,12 +40,12 @@ repos:
           - --py3-plus
           - --keep-runtime-typing
 
-#  - repo: https://github.com/codespell-project/codespell
-#    rev: v2.4.1
-#    hooks:
-#      - id: codespell
-#        additional_dependencies:
-#          - tomli
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.4.1
+    hooks:
+      - id: codespell
+        additional_dependencies:
+          - tomli
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.12.7
@@ -69,10 +69,10 @@ repos:
         args: [ "-c", "pyproject.toml" ]
         additional_dependencies: [ "bandit[toml]" ]
 
-#  - repo: https://github.com/gitleaks/gitleaks
-#    rev: v8.28.0
-#    hooks:
-#      - id: gitleaks
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.28.0
+    hooks:
+      - id: gitleaks
 
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v4.8.3
