feat(config): add NoSQL settings for MongoDB

--- a/.env.sample
+++ b/.env.sample
@@ -28,6 +28,14 @@ MEMCACHED_PORT=11111
 MEMCACHED_USERNAME="username"
 MEMCACHED_PASSWORD="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 
+# MongoDB
+MONGODB_SCHEME="mongodb+srv"
+MONGODB_USERNAME="jpcadena"
+MONGODB_PASSWORD="AAAAAAAAAAAAAAAA"
+MONGODB_SERVER="freecluster.aaaaaaa.mongodb.net"
+MONGODB_PORT=27017
+MONGODB_DB="fastorders_api_db"
+
 # Postgres
 POSTGRES_SCHEME="postgresql+asyncpg"
 POSTGRES_USER="fastorders_api_user"
